# khuri_treiman_solver

./: CITATION.cff  CMakeLists.txt  Makefile  NOTICE.md  README.md  STYLE_GUIDE.md  setup.py
.github/workflows/: cpp_tests.yml  example.yml  python_tests.yml
cpp/docs/: Doxyfile
cpp/example/: CMakeLists.txt  KT.cpp  io.json
cpp/include/: angular_average.h  array.h  asymptotic.h  basis_function.h  cauchy.h  constants.h  dispersion_integral.h  enums.h  facilities.h  grid.h  gsl_interface.h  iterative_solution.h  kernel.h  khuri_treiman.h  mandelstam.h  matching.h  partial_wave.h  path.h  path_eta_pi_pi.h  phase.h  phase_space.h  piecewise.h  splined_omnes.h  splined_path.h  type_aliases.h
cpp/src/: angular_average.cpp  array.cpp  asymptotic.cpp  basis_function.cpp  cauchy.cpp  dispersion_integral.cpp  grid.cpp  gsl_interface.cpp  iterative_solution.cpp  kernel.cpp  matching.cpp  partial_wave.cpp  path.cpp  path_eta_pi_pi.cpp  phase.cpp  piecewise.cpp  splined_omnes.cpp  splined_path.cpp
cpp/tests/: CMakeLists.txt  CMakeLists.txt.in  test_cauchy.cpp  test_gsl_interface.cpp
docs/: conf.py  index.rst
docs/content/: api.rst  installation.rst  khuri_treiman_pinocchio.rst
khuri/: glued_amplitudes.py  khuri_pinocchio.py  path.py  phases.py  pole.py
khuri/bindings/: curved_omnes_bindings.cpp  khuri_pinocchio_bindings.cpp  khuri_treiman_bindings.cpp  mandelstam_bindings.cpp  omnes_bindings.cpp  path_bindings.cpp
khuri/tests/: helpers.py  test_basis.py  test_omnes.py  test_phases.py
